bases/nexus-adm-api/1.0.0gw/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-adm-api-deployment
  labels:
    app: nexus-adm-api
spec:
  selector:
    matchLabels:
      app: nexus-adm-api
  template:
    metadata:
      labels:
        app: nexus-adm-api
    spec:
      serviceAccountName: nexus-adm-api-sa
      containers:
      - name: nexus-adm-api-container
        image: nexus-adm-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
#        resources:
#          requests:
#            cpu: "100m"
#            memory: "128Mi"
